force-app/main/default/objects/CustomLog__c/CustomLog__c.object-meta.xml
<CustomObject>
    <description>create records of this type in apex or other process when wanting to store error messages or info in the database</description>
    <label>Custom Log</label>
    <nameField>
        <displayFormat>CL-{0000000}</displayFormat>
        <label>Custom Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Custom Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>