force-app/main/default/objects/CustomLog__c/fields/Class__c.field-meta.xml
<CustomField>
    <fullName>Class__c</fullName>
    <description>Name of Apex Class</description>
    <inlineHelpText>Name of Apex Class</inlineHelpText>
    <label>Class</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>