force-app/main/default/objects/CustomLog__c/fields/LogLevel__c.field-meta.xml
<CustomField>
    <fullName>LogLevel__c</fullName>
    <defaultValue>1</defaultValue>
    <description>1-9. 1 is highest priority log, 9 is lowest priority log.</description>
    <inlineHelpText>number in range [1-9]. 1 is highest priority log (e.g. exceptions), 9 is lowest priority log (e.g. info).</inlineHelpText>
    <label>Log Level</label>
    <precision>1</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>