force-app/main/default/objects/CustomLog__c/fields/Message__c.field-meta.xml
<CustomField>
    <fullName>Message__c</fullName>
    <description>Exception Message or Info Message. Says what went wrong or what is happening.</description>
    <inlineHelpText>Exception Message or Info Message. Says what went wrong or what is happening.</inlineHelpText>
    <label>Message</label>
    <length>255</length>
    <type>Text</type>
</CustomField>