force-app/main/default/objects/CustomLog__c/fields/Occured__c.field-meta.xml
<CustomField>
    <fullName>Occured__c</fullName>
    <description>Exact Date/Time that this log event occured. Useful since some logs will be created in @future method.</description>
    <inlineHelpText>Exact Date/Time that this log event occured</inlineHelpText>
    <label>Occured</label>
    <required>true</required>
    <type>DateTime</type>
</CustomField>