force-app/main/default/objects/CustomLog__c/fields/StackTrace__c.field-meta.xml
<CustomField>
    <fullName>StackTrace__c</fullName>
    <description>where in the code this log occurred</description>
    <inlineHelpText>where in the code this log occurred (retrieved from exception.getStackTraceString() for exceptions)</inlineHelpText>
    <label>Stack Trace</label>
    <length>255</length>
    <type>Text</type>
</CustomField>